<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
   SPDX-License-Identifier: MIT-0
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_gallery_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/select_from_photo_library"
        android:textAlignment="center"
        android:textColor="#666666"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_camera_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/camera_text"
        android:textAlignment="center"
        android:textColor="#666666"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dialog_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/cancel_text"
        android:textAlignment="center"
        android:textColor="#666666"
        android:textSize="14sp" />
</LinearLayout>