<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
   SPDX-License-Identifier: MIT-0
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linear_layout_post_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/post_body">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="0"
                android:src="@drawable/ic_baseline_account_circle_24"
                app:civ_border_color="@color/grey"
                app:civ_border_width="1dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_layout_post_item_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                android:layout_weight="1"
                app:layout_constraintStart_toStartOf="@+id/avatar_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/post_body">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/example_username"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/post_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/example_post_time"
                        android:textSize="16sp" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/post_menu"
                android:src="@drawable/ic_baseline_more_vert_24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="0dp"
                android:minWidth="0dp"
                android:layout_weight="0"
                android:layout_marginEnd="16dp"
                android:padding="0dp"
                android:layout_marginTop="16dp"
                style="?android:attr/borderlessButtonStyle" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/post_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:text="@string/example_post_body"
        app:layout_constraintBottom_toTopOf="@+id/post_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_post_item_title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/post_image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_body"
        app:layout_constraintDimensionRatio="1:1"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>